--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,24 @@
 certifi==2018.11.29
+cffi==1.14.0
 chardet==3.0.4
+cryptography==2.9.2
 defusedxml==0.5.0
-Django==1.11
+Django==1.11.29
 django-allauth==0.38.0
 django-braces==1.13.0
+django-cors-headers==3.2.1
 django-rest-auth==0.9.3
+django-rest-knox==4.1.0
 djangorestframework==3.9.1
+gunicorn==20.0.4
 idna==2.8
 oauthlib==3.0.1
 Pillow==5.4.1
+pycparser==2.20
 python3-openid==3.1.0
 pytz==2018.9
 requests==2.21.0
 requests-oauthlib==1.2.0
 six==1.12.0
 urllib3==1.24.1
+whitenoise==5.0.1
